--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 <input type="password" id="password" placeholder="Password">
 <button onclick="login()">Login</button>
 
+<!-- ✅ Load Firebase via script tags -->
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+
 <script src="firebase-config.js"></script>
 <script src="script.js"></script>
 
