--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Ensure this contains previous design updates -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="firebase-config.js"></script>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- ✅ Load Firebase SDK from CDN (Fixed) -->
+    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+
+    <!-- ✅ Load Firebase Config & Main Script (Ensuring Firebase Loads First) -->
+    <script defer src="firebase-config.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="login-container">
