--- a/dashboard.html
+++ b/dashboard.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="firebase-config.js"></script>
-    <script src="script.js"></script>
+
+    <!-- ✅ Load Firebase SDK from CDN -->
+    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+
+    <!-- ✅ Load Firebase Config & Main Script -->
+    <script defer src="firebase-config.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="sidebar">
