--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <p id="loginError" class="error-message"></p>
   </div>
 
-  <!-- Load Firebase SDK (Compat versions) -->
+  <!-- Load Firebase compat SDK (v9 compat avoids module import errors) -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-
-  <!-- Load Firebase configuration and main script -->
+  
+  <!-- Load Firebase configuration & main script -->
   <script src="firebase-config.js"></script>
   <script src="script.js"></script>
 </body>
